Bug 100292 - KIG crashes with sine-curve.kig due to an assert failing
Summary: KIG crashes with sine-curve.kig due to an assert failing
Status: RESOLVED FIXED
Alias: None
Product: kig
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: unspecified Linux
: NOR crash
Target Milestone: ---
Assignee: Pino Toscano
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2005-02-26 03:41 UTC by Henrique Pinto
Modified: 2005-04-14 18:12 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Henrique Pinto 2005-02-26 03:41:58 UTC
Version:           v0.9.1 (using KDE 3.4.0, compiled sources)
Compiler:          gcc version 3.3.4
OS:                Linux (i586) release 2.4.26

If I try to load kdeedu/kig/examples/sine-curve.kig, the program exits due to an assert failing. The console output is:

kig: /home/tawhaki/KDE/src/kdeedu/kig/misc/object_hierarchy.cc:538: ObjectHierarchy::ObjectHierarchy(const QDomElement&): Assertion `type' failed.

This probably happens because I haven't enabled the Python scripting support. Yet it would be nice if Kig could show a nice messagebox telling that an error occurred instead of crashing.
Comment 1 Dominique Devriese 2005-02-26 04:26:58 UTC
Henrique Pinto writes:

> If I try to load kdeedu/kig/examples/sine-curve.kig, the program
> exits due to an assert failing. The console output is:

> kig: /home/tawhaki/KDE/src/kdeedu/kig/misc/object_hierarchy.cc:538:
> ObjectHierarchy::ObjectHierarchy(const QDomElement&): Assertion
> `type' failed.

> This probably happens because I haven't enabled the Python scripting
> support. Yet it would be nice if Kig could show a nice messagebox
> telling that an error occurred instead of crashing.

Hm, I thought I fixed this some time ago..  I'll check..

cheers
domi

Comment 2 Dominique Devriese 2005-02-26 04:35:25 UTC
Dominique Devriese writes:

> Henrique Pinto writes:

>> If I try to load kdeedu/kig/examples/sine-curve.kig, the program
>> exits due to an assert failing. The console output is:

>> kig: /home/tawhaki/KDE/src/kdeedu/kig/misc/object_hierarchy.cc:538:
>> ObjectHierarchy::ObjectHierarchy(const QDomElement&): Assertion
>> `type' failed.

>> This probably happens because I haven't enabled the Python
>> scripting support. Yet it would be nice if Kig could show a nice
>> messagebox telling that an error occurred instead of crashing.

> Hm, I thought I fixed this some time ago..  I'll check..

Strange, when I simulate this on my system, by changing Python*Type to
Appel*Type ( this should be identical to your situation ), it shows a
nice detailedError() dialog with in the details box "This Kig file
uses an object of type "AppelCompileType", which this Kig version does
not support.Perhaps you have compiled Kig without support for this
object type,or perhaps you are using an older Kig version."  When did
you last update and recompile your Kig checkout ?  If the problem
persists, I'll try to recompile without python to replicate your
situation more exactly..

cheers
domi

Comment 3 Henrique Pinto 2005-02-26 13:29:15 UTC
Hi!

Em Sáb 26 Fev 2005 00:35, Dominique Devriese escreveu:
> When did you last update and recompile your Kig checkout ?

30 minutes ago. The problem still persists. Please let me know if I can do 
something to help.

Comment 4 Dominique Devriese 2005-02-26 20:10:57 UTC
Henrique Pinto writes:

> Hi!

> Em S
Comment 5 Pino Toscano 2005-04-14 18:04:27 UTC
CVS commit by pino: 

Fixing bug 100292: KIG crashes with sine-curve.kig due to an assert failing.

I'm going to backport it soon, since it doesn't modify any string.

CCBUG: 100292


  M +9 -15     filters/native-filter.cc   1.37
  M +1 -1      misc/lists.cc   1.25
  M +33 -31    misc/object_hierarchy.cc   1.26
  M +11 -3     misc/object_hierarchy.h   1.15
  M +61 -44    objects/object_imp_factory.cc   1.11
  M +1 -1      objects/object_imp_factory.h   1.5
Comment 6 Pino Toscano 2005-04-14 18:12:14 UTC
CVS commit by pino: 

Backport fix for bug 100292: KIG crashes with sine-curve.kig due to an assert failing.

BUG: 100292


  M +9 -15     filters/native-filter.cc   1.36.2.1
  M +1 -1      misc/lists.cc   1.24.2.1
  M +33 -31    misc/object_hierarchy.cc   1.25.2.1
  M +11 -3     misc/object_hierarchy.h   1.14.2.1
  M +61 -44    objects/object_imp_factory.cc   1.10.2.1
  M +1 -1      objects/object_imp_factory.h   1.4.2.1