Backport fix for bug 100292: KIG crashes with sine-curve.kig due to an assert failing.

BUG: 100292

svn path=/branches/KDE_3_4_BRANCH/kdeedu/kig/; revision=405558